--- a/pom.xml
+++ b/pom.xml
@@ -21,15 +21,25 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-	<dependency>
-	    <groupId>org.jgrapht</groupId>
-	    <artifactId>jgrapht-jdk1.5</artifactId>
-	    <version>0.7.3</version>
-	</dependency>		
-	<dependency>
+    <dependency>
 		<groupId>org.jgrapht</groupId>
-		<artifactId>jgrapht-io</artifactId>
-		<version>1.2.0</version>
+	    <artifactId>jgrapht-core</artifactId>
+		<version>1.2.0</version>	
+	</dependency>
+    <dependency>
+		<groupId>org.jgrapht</groupId>
+	    <artifactId>jgrapht-io</artifactId>
+		<version>1.2.0</version>	
+	</dependency>
+    <dependency>
+		<groupId>org.jgrapht</groupId>
+	    <artifactId>jgrapht-ext</artifactId>
+		<version>1.2.0</version>	
+	</dependency>
+	<dependency>
+	    <groupId>jgraph</groupId>
+	    <artifactId>jgraph</artifactId>
+	    <version>5.13.0.0</version>
 	</dependency>
   </dependencies>
 </project>
